# webfetch

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  claude.md  pyproject.toml  requirements.txt  server.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  publish.yml
docs/: ROADMAP.md  architecture.md  context.md
evals/: build_datasets.py  common.py  fetch_datasets.py  run_compression_eval.py  run_e2e_eval.py  run_list_eval.py  run_matcher_eval.py  run_pipeline_eval.py  run_volatility_eval.py  test_metrics.py
evals/datasets/: compression_chunks.jsonl  fresh_queries_2026_07.jsonl  fresh_queries_2026_07.meta.json  freshqa_queries.jsonl  freshqa_queries.meta.json  list_chunks.jsonl  list_queries.jsonl  live_queries.jsonl  live_queries.meta.json  matcher_pairs.jsonl  matcher_pairs.meta.json  tech_volatility_queries.jsonl
evals/results/: README.md  compression_eval_20260713_173554.json  compression_eval_20260713_175620.json  compression_recommendation.json  e2e_eval_20260712_234356.json  e2e_eval_20260712_235315.json  e2e_eval_20260713_010713.json  e2e_eval_20260713_191540.json  e2e_eval_20260713_192556.json  e2e_eval_20260713_202159.json  e2e_eval_20260713_205526.json  e2e_eval_20260713_222646.json  e2e_eval_20260713_223213.json  e2e_eval_20260714_005531.json  e2e_eval_20260714_024356.json  e2e_eval_20260714_062038.json  e2e_eval_20260714_165313.json  e2e_eval_20260714_170325.json  e2e_eval_20260714_173905.json  e2e_eval_20260717_205151.json  list_eval_20260718_152052.json  matcher_eval_20260709_004727.json  matcher_eval_20260709_223305.json  matcher_eval_20260709_223847.json  matcher_eval_20260718_175935.json  matcher_recommendation.json  pipeline_eval_20260709_005121.json  pipeline_eval_20260709_014412.json  pipeline_eval_20260709_215450.json  pipeline_eval_20260709_221020.json  pipeline_eval_20260710_013208.json  pipeline_eval_20260710_171009.json  pipeline_eval_20260712_142114.json  pipeline_eval_20260712_163015.json  pipeline_eval_20260712_195459.json  pipeline_eval_20260712_213420.json  pipeline_eval_20260712_231632.json  volatility_eval_20260712_124512.json  volatility_eval_20260712_124832.json  volatility_eval_20260718_181350.json  (+1 more)
examples/: agent_loop.py
plugin/: .mcp.json  README.md
plugin/.claude-plugin/: plugin.json
tests/: test_cache.py  test_chunker.py  test_compress.py  test_context.py  test_packaging.py  test_receipts.py  test_resilience.py  test_status.py  test_tool.py  test_update_check.py  test_volatility.py
webfetch/: __init__.py  _env.py  cache.py  compress.py  config.py  mcp.py  pipeline.py  receipts.py  semcache.py  status.py  tool.py  update_check.py  volatility.py
webfetch/data/: volatility_centroids.json
webfetch/extract/: __init__.py  base.py  claude.py  gemini.py  gpt.py  groq.py
webfetch/fetch/: __init__.py  base.py  html.py  pdf.py
webfetch/rank/: __init__.py  base.py  biencoder.py  bm25.py  chunker.py  crossencoder.py  hybrid.py  rrf.py
webfetch/search/: __init__.py  base.py  brave.py  ddg.py  multi.py  resilience.py  serper.py  tavily.py
